crates/rpdf-parser/tests/regression/snapshots/lib__regression__s6_xref_stream_irs_f1040es.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 137
expression: parse_to_snapshot(& bytes)
---
error: "MalformedPageContents { reason: \"Contents object 113 0 R is not a stream\" }"
