crates/rpdf-parser/tests/regression/snapshots/lib__regression__s7_xref_stream_irs_f1120.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 138
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 6
  metadata:
    title: 2025 Form 1120
    author: "C:DC:TS:CAR:MP"
    producer: Designer 6.5
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 5679
    - index: 1
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 3003
    - index: 2
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 4612
    - index: 3
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 3337
    - index: 4
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 4512
    - index: 5
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 5496
