crates/rpdf-parser/tests/regression/snapshots/lib__regression__s8_xref_stream_irs_f941.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 139
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 3
  metadata:
    title: Form 941 (Rev. March 2026)
    author: "C:DC:TS:CAR:MP"
    producer: Designer 6.5
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 611.976
        - 791.968
      rotation: 0
      op_count: 3563
    - index: 1
      media_box:
        - 0
        - 0
        - 611.976
        - 791.968
      rotation: 0
      op_count: 1663
    - index: 2
      media_box:
        - 0
        - 0
        - 611.976
        - 791.968
      rotation: 0
      op_count: 912
