crates/rpdf-parser/tests/regression/snapshots/lib__regression__t2_trad_xref_tracemonkey.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 121
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 14
  metadata:
    producer: pdfeTeX-1.21a
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 389
    - index: 1
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 327
    - index: 2
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 261
    - index: 3
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 481
    - index: 4
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 369
    - index: 5
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 430
    - index: 6
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 435
    - index: 7
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 758
    - index: 8
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 291
    - index: 9
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 388
    - index: 10
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 296
    - index: 11
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 231
    - index: 12
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 244
    - index: 13
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 179
