crates/rpdf-parser/tests/regression/snapshots/lib__regression__t3_trad_xref_canvas.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 122
expression: parse_to_snapshot(& bytes)
---
error: "MalformedStream { offset: 61, reason: \"/Length is an indirect reference (not yet supported; Task #7)\" }"
