crates/rpdf-parser/tests/regression/snapshots/lib__regression__t4_trad_xref_cmyk_jpeg.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 123
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 1
  metadata:
    title: Print
    producer: Adobe PDF library 9.90
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 7
