crates/rpdf-parser/tests/regression/snapshots/lib__regression__t5_trad_xref_attachment.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 124
expression: parse_to_snapshot(& bytes)
---
error: "MalformedStream { offset: 64, reason: \"/Length is an indirect reference (not yet supported; Task #7)\" }"
