crates/rpdf-parser/tests/regression/snapshots/lib__regression__t6_trad_xref_find_all.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 125
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 1
  metadata:
    producer: Skia/PDF m90
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 31
