crates/rpdf-parser/tests/regression/snapshots/lib__regression__t7_trad_xref_issue1155r.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 126
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 1
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 595.28
        - 841.89
      rotation: 0
      op_count: 5
