crates/rpdf-parser/tests/regression/snapshots/lib__regression__t8_trad_xref_issue1293r.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 127
expression: parse_to_snapshot(& bytes)
---
error: "MalformedStream { offset: 370, reason: \"missing /Length in stream dictionary\" }"
